--- a/src/gio/Makefile
+++ b/src/gio/Makefile
@@ -8,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${ARCH_DEFINES} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${GIO_LIBS}
