extra.mk must override buildsys.mk's plugindir variable.

--- a/extra.mk.in
+++ b/extra.mk.in
@@ -1,4 +1,5 @@
 VERSION ?= @VERSION@
+plugindir ?= @plugindir@
 
 CONTAINER_PLUGIN_DIR ?= @CONTAINER_PLUGIN_DIR@
 CONTAINER_PLUGINS ?= @CONTAINER_PLUGINS@
