--- a/extra.mk.in
+++ b/extra.mk.in
@@ -82,8 +82,7 @@ OGG_VORBIS_CFLAGS ?= @OGG_VORBIS_CFLAGS@
 OGG_VORBIS_LIBS ?= @OGG_VORBIS_LIBS@
 OPENAL_CFLAGS ?= @OPENAL_CFLAGS@
 OPENAL_LIBS ?= @OPENAL_LIBS@
-OSS_LIBS ?= @OSS_LIBS@
-OSS4_CPPFLAGS ?= @OSS4_CPPFLAGS@
+OSS_CFLAGS ?= @OSS_CFLAGS@
 PANGO_CFLAGS ?= @PANGO_CFLAGS@
 PANGO_LIBS ?= @PANGO_LIBS@
 PANGOCAIRO_CFLAGS ?= @PANGOCAIRO_CFLAGS@
