bs2b: Add configuration options.

--- a/src/bs2b/Makefile
+++ b/src/bs2b/Makefile
@@ -8,6 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CXXFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${BS2B_CFLAGS}
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${MOWGLI_LIBS} ${BS2B_LIBS}
+CPPFLAGS += -std=gnu99 ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${BS2B_CFLAGS}-I../..
+LIBS += ${GTK_LIBS} ${BS2B_LIBS}
