Add search-tool to buildsys.

--- a/configure.ac
+++ b/configure.ac
@@ -50,7 +50,7 @@ dnl ======================
 INPUT_PLUGINS="tonegen metronom vtx"
 OUTPUT_PLUGINS="null"
 EFFECT_PLUGINS="compressor crossfade crystalizer ladspa mixer sndstretch stereo_plugin voice_removal echo_plugin"
-GENERAL_PLUGINS="alarm albumart"
+GENERAL_PLUGINS="alarm albumart search-tool"
 VISUALIZATION_PLUGINS="blur_scope cairo-spectrum"
 CONTAINER_PLUGINS="m3u pls asx"
 TRANSPORT_PLUGINS="unix-io"
@@ -1298,6 +1298,8 @@ echo
 echo "  General"
 echo "  -------"
 echo "  Alarm:                                  yes"
+echo "  Album Art:                              yes"
+echo "  Search Tool:                            yes"
 echo "  Song Change:                            $enable_songchange"
 echo "  Status Icon:                            $have_statusicon"
 echo "  Audacious OSD:                          $have_aosd"
@@ -1309,7 +1311,6 @@ echo "  AudioScrobbler Client:                  $have_scrobbler"
 echo "  Upload to MTP device:                   $have_mtp_up"
 echo "  MacOS Dock Album Art plugin:            $have_dockalbumart"
 echo "  LyricWiki viewer:                       $enable_lyricwiki"
-echo "  Album Art widget:                       yes"
 echo
 echo "  Effect"
 echo "  ------"
