--- a/src/mms/Makefile
+++ b/src/mms/Makefile
@@ -7,6 +7,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${TRANSPORT_PLUGIN_DIR}
 
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${MMS_CFLAGS} -I../.. -Wall
+CPPFLAGS += ${PLUGIN_CPPFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS} ${MMS_CFLAGS} -I../.. -Wall
 CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${MMS_LIBS}
