--- a/src/oss4/Makefile
+++ b/src/oss4/Makefile
@@ -11,5 +11,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${OSS_CFLAGS} -I../.. ${GTK_CFLAGS} ${GLIB_CFLAGS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${OSS_CFLAGS} -I../.. ${GTK_CFLAGS} ${GLIB_CFLAGS}
 LIBS += ${GTK_LIBS} ${GLIB_LIBS}
