--- a/src/sndfile/Makefile
+++ b/src/sndfile/Makefile
@@ -9,5 +9,5 @@ include ../../buildsys.mk
 plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}   -I../.. 
-LIBS += ${MOWGLI_LIBS} ${SNDFILE_LIBS} ${GTK_LIBS} ${GLIB_LIBS} -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}   -I../..
+LIBS += ${SNDFILE_LIBS} ${GTK_LIBS} ${GLIB_LIBS} -lm
