--- a/src/streambrowser/Makefile
+++ b/src/streambrowser/Makefile
@@ -21,6 +21,6 @@ PACKAGE = audacious
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${XML_CFLAGS} -I../.. -DDATA_DIR=\"${datadir}/${PACKAGE}\"
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${MOWGLI_LIBS} ${XML_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${XML_CFLAGS} -I../.. -DDATA_DIR=\"${datadir}/${PACKAGE}\"
+LIBS += ${GTK_LIBS} ${GLIB_LIBS} ${XML_LIBS}
 
