--- a/src/OSS/Makefile
+++ b/src/OSS/Makefile
@@ -11,5 +11,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${OSS_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../.. -I.
-LIBS += ${OSS_LIBS} ${GTK_LIBS} ${GLIB_LIBS} 
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${OSS_CFLAGS}  ${GTK_CFLAGS} ${GLIB_CFLAGS}  -I../.. -I.
+LIBS += ${OSS_LIBS} ${GTK_LIBS} ${GLIB_LIBS}
