--- a/src/filewriter/Makefile
+++ b/src/filewriter/Makefile
@@ -13,5 +13,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${GTK_CFLAGS}  ${MOWGLI_CFLAGS}  ${FILEWRITER_CFLAGS} ${OGG_VORBIS_CFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${GTK_CFLAGS}   ${FILEWRITER_CFLAGS} ${OGG_VORBIS_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${FILEWRITER_LIBS}
