--- a/src/gntui/Makefile
+++ b/src/gntui/Makefile
@@ -12,5 +12,5 @@ GNT_CFLAGS = `pkg-config --cflags gnt`
 GNT_LIBS = `pkg-config --libs gnt`
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MOWGLI_CFLAGS} ${GLIB_CFLAGS} ${GNT_CFLAGS} -I../..
-LIBS += ${GLIB_LIBS} ${MOWGLI_LIBS} ${GNT_LIBS}
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${GNT_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${GNT_LIBS}
