--- a/src/null/Makefile
+++ b/src/null/Makefile
@@ -8,5 +8,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}   ${MOWGLI_CFLAGS} -I../..
-LIBS += ${GTK_LIBS} ${GLIB_LIBS} 
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS}   -I../..
+LIBS += ${GTK_LIBS} ${GLIB_LIBS}
