Set -std=gnu99 in top-level CFLAGS.

--- a/src/albumart/Makefile
+++ b/src/albumart/Makefile
@@ -7,5 +7,5 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
-CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS}
+CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
