--- a/src/ladspa/Makefile
+++ b/src/ladspa/Makefile
@@ -11,5 +11,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${EFFECT_PLUGIN_DIR}
 
 CPPFLAGS += -I../.. ${PTHREAD_CFLAGS}
-CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS}
+CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += -lm ${PTHREAD_LIBS}
