--- a/src/skins/Makefile
+++ b/src/skins/Makefile
@@ -159,6 +159,6 @@ DATA = Skins/Classic/balance.png	\
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
-CPPFLAGS += -std=gnu99 ${PLUGIN_CPPFLAGS} -I../..
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
 CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += -lm
