--- a/src/roaraudio/Makefile
+++ b/src/roaraudio/Makefile
@@ -7,6 +7,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
-CFLAGS += ${PLUGIN_CFLAGS} -std=gnu99
+CFLAGS += ${PLUGIN_CFLAGS}
 CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GTK_CFLAGS} ${GLIB_CFLAGS} ${LIBROAR_CFLAGS} -I../..
 LIBS += ${LIBROAR_LIBS} ${GTK_LIBS} ${GLIB_LIBS}
