--- a/src/sdlout/Makefile
+++ b/src/sdlout/Makefile
@@ -9,5 +9,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
 CPPFLAGS += -I../.. ${PTHREAD_CFLAGS} ${GTK_CFLAGS} ${SDL_CFLAGS}
-CFLAGS += -std=gnu99 ${PLUGIN_CFLAGS}
+CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += -lm ${PTHREAD_LIBS} ${GTK_LIBS} ${SDL_LIBS}
