--- a/extra.mk.in
+++ b/extra.mk.in
@@ -53,6 +53,8 @@ FLUIDSYNTH_CFLAGS ?= @FLUIDSYNTH_CFLAGS@
 FLUIDSYNTH_LIBS ?= @FLUIDSYNTH_LIBS@
 GDKX11_CFLAGS ?= @GDKX11_CFLAGS@
 GDKX11_LIBS ?= @GDKX11_LIBS@
+GIO_UNIX_CFLAGS ?= @GIO_UNIX_CFLAGS@
+GIO_UNIX_LIBS ?= @GIO_UNIX_LIBS@
 GLIB_CFLAGS ?= @GLIB_CFLAGS@
 GLIB_LIBS ?= @GLIB_LIBS@
 GMODULE_CFLAGS ?= @GMODULE_CFLAGS@
