--- a/src/modplug/Makefile
+++ b/src/modplug/Makefile
@@ -15,5 +15,5 @@ plugindir := ${plugindir}/${INPUT_PLUGIN_DIR}
 LD = ${CXX}
 CFLAGS += ${PLUGIN_CFLAGS}
 CXXFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} ${MODPLUG_CFLAGS} -I../..
-LIBS += ${MODPLUG_LIBS} -lstdc++
+CPPFLAGS += ${PLUGIN_CPPFLAGS} ${GLIB_CFLAGS} ${MODPLUG_CFLAGS} -I../..
+LIBS += ${GLIB_LIBS} ${MODPLUG_LIBS} -lstdc++
