--- a/src/alsa/Makefile
+++ b/src/alsa/Makefile
@@ -9,6 +9,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${OUTPUT_PLUGIN_DIR}
 
-CFLAGS += ${PLUGIN_CFLAGS} ${GTK_CFLAGS} ${ALSA_CFLAGS}
-CPPFLAGS += -I../..
+CFLAGS += ${PLUGIN_CFLAGS}
+CPPFLAGS += ${GTK_CFLAGS} ${ALSA_CFLAGS} -I../..
 LIBS += ${GTK_LIBS} ${ALSA_LIBS}
