--- a/src/gtkui/Makefile
+++ b/src/gtkui/Makefile
@@ -16,5 +16,5 @@ include ../../extra.mk
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
 CFLAGS += ${PLUGIN_CFLAGS}
-CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../..
-LIBS += -lm
+CPPFLAGS += ${PLUGIN_CPPFLAGS} -I../.. ${GTK_CFLAGS}
+LIBS += -lm ${GTK_LIBS}
