--- a/src/search-tool/Makefile
+++ b/src/search-tool/Makefile
@@ -7,6 +7,6 @@ include ../../extra.mk
 
 plugindir := ${plugindir}/${GENERAL_PLUGIN_DIR}
 
-CPPFLAGS += -I../..
-CFLAGS += ${PLUGIN_CFLAGS} ${GTK_CFLAGS}
+CPPFLAGS += -I../.. ${GTK_CFLAGS}
+CFLAGS += ${PLUGIN_CFLAGS}
 LIBS += ${GTK_LIBS}
