--- a/configure.ac
+++ b/configure.ac
@@ -73,15 +73,7 @@ fi
 ### ---------------------------------------------------------------------------
 dnl Pthread support
 dnl ===============
-PTHREAD_LIBS=
-PTHREAD_CFLAGS=
-
-AC_CHECK_LIB(pthread, pthread_create, PTHREAD_LIBS="-lpthread",
-  [AC_CHECK_LIB(pthreads, pthread_create, PTHREAD_LIBS="-lpthreads",
-	[AC_CHECK_LIB(pthreadGC2, pthread_create, PTHREAD_LIBS="-lpthreadGC2")]
-  )]
-)
-
+ACX_PTHREAD
 AC_SUBST([PTHREAD_LIBS])
 AC_SUBST([PTHREAD_CFLAGS])
 
